cmake_minimum_required(VERSION 3.30.5)
project(Ejercicios_PP2_2025)

set(CMAKE_CXX_STANDARD 20)

add_executable(Ejercicios_PP2_2025 main.cpp
        GuiaUnidad1/Eje010.cpp
        GuiaUnidad2/Eje001.cpp
        GuiaUnidad2/Eje002.cpp
        GuiaUnidad2/Eje003.cpp
        GuiaUnidad2/Eje004.cpp
        GuiaUnidad2/Eje005.cpp
        GuiaUnidad2/Eje006.cpp
        GuiaUnidad2/Eje007.cpp
        GuiaUnidad2/Eje008.cpp
        GuiaUnidad2/Eje009.cpp
        Clases/08-09-2025.cpp
        GuiaUnidad4/Eje001.cpp
        GuiaUnidad4/Eje002.cpp
        GuiaUnidad4/Eje003.cpp
        GuiaUnidad4/Eje004.cpp
        GuiaUnidad4/Eje005.cpp
        GuiaUnidad4/Eje006.cpp
        GuiaUnidad4/Eje007.cpp
        GuiaUnidad4/Eje008.cpp
)
